Open Klipper under mouse also on wayland

On Wayland if Plasma had no focus when the shortcut was invoked
- the menu window is  created as toplevel because it has no parent and
  there is no current focusWindow
- the application can't know the currrent cursor position
We use a newly introduced request on plasma_surface to open under the cursor.
As it can only be called before mapping a buffer to a surface, the menu is hidden
before being shown again.
BUG:436249
FIXED-IN:5.25